# mcc_2d

./: main.cpp  mcc_2d.code-workspace
mcc_2d_qt/build-mcc_2d_qt-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
mcc_2d_qt/build-mcc_2d_qt-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-1a18f33cfe79d019b20a.json  cmakeFiles-v1-d7bb46e76262082590af.json  codemodel-v2-6b8d7d02405f4ae103b1.json  directory-.-Debug-9b8a6bb0fd6c1a2d294a.json  index-2024-03-28T08-50-18-0760.json  target-mcc_2d_qt-Debug-b1cbd2dee9b50697e627.json  target-mcc_2d_qt_autogen-Debug-9707ae90188d7616021c.json
mcc_2d_qt/build-mcc_2d_qt-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-a2cf987c0a76f8c4bbf7.json  directory-.-Debug-79b1071aa60d709dffee.json  index-2024-03-27T19-41-41-0919.json  target-mcc_2d_qt-Debug-a634498ae660974059af.json  target-mcc_2d_qt_autogen_timestamp_deps-Debug-38483e8e6182d8911e24.json
mcc_2d_qt/build-mcc_2d_qt-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
mcc_2d_qt/build-mcc_2d_qt-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
mcc_2d_qt/build-mcc_2d_qt-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: block.cpp.33EA1734A238142A.idx  (+11 more)
mcc_2d_qt/build-mcc_2d_qt-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/mcc_2d_qt_autogen/: deps
mcc_2d_qt/mcc_2d_qt/: CMakeLists.txt  block.cpp  block.h  cell.cpp  cell.h  game.cpp  game.h  human.cpp  human.h  inventory.cpp  inventory.h  main.cpp
